--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ uvicorn>=0.20.0
 gunicorn>=21.0.0
 Flask>=3.0.0
 Werkzeug>=3.0.0
+python-multipart>=0.0.9
 
 # ─── Google AI / Generative AI ─────────────────────────────────────────────────
 google-generativeai>=0.8.0
@@ -67,7 +68,7 @@ pydantic_core>=2.14.0
 jsonschema>=4.20.0
 
 # ─── Trading / Finance ─────────────────────────────────────────────────────────
-# ccxt>=4.0.0  # Disabled - requires Python 3.10+
+ccxt>=4.0.0
 TA-Lib>=0.4.0
 pyarrow>=14.0.0
 
@@ -93,6 +94,10 @@ watchdog>=3.0.0
 GitPython>=3.1.0
 gitdb>=4.0.0
 smmap>=5.0.0
+
+# ─── Database ──────────────────────────────────────────────────────────────────
+sqlalchemy>=2.0.0
+aiosqlite>=0.19.0
 
 # ─── Testing ───────────────────────────────────────────────────────────────────
 pytest>=7.4.0
