--- a/chainboard-ui/package.json
+++ b/chainboard-ui/package.json
@@ -12,6 +12,9 @@
     "react-dom": "^18.2.0",
     "recharts": "^2.7.2",
     "@radix-ui/react-tabs": "^1.0.3",
+    "@xterm/xterm": "^5.4.0",
+    "@xterm/addon-fit": "^0.9.0",
+    "@xterm/addon-web-links": "^0.10.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
