--- a/chainbridge_kernel/Cargo.toml
+++ b/chainbridge_kernel/Cargo.toml
@@ -26,6 +26,8 @@ thiserror = "1.0"
 sha2 = "0.10"
 hex = "0.4"
 fs2 = "0.4"  # PAC-OCC-P25: Cross-platform file locking
+signal-hook = "0.3"  # PAC-OCC-P16: Async-signal-safe signal handling
+libc = "0.2"  # PAC-OCC-P16: Low-level signal constants
 
 [dev-dependencies]
 pretty_assertions = "1.4"
